--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -4,13 +4,16 @@
     android:versionCode="1"
     android:versionName="1.0" >
 
+    <uses-sdk
+        android:maxSdkVersion="18"
+        android:minSdkVersion="16"
+        android:targetSdkVersion="21" />
+
     <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
 
-    <uses-sdk
-        android:minSdkVersion="16"
-        android:targetSdkVersion="21" 
-        android:maxSdkVersion="18" />
+    <!--<android:uses-permission android:name="android.permission.READ_PHONE_STATE" />-->
 
     <application
         android:name=".RestApplication"
@@ -28,8 +31,8 @@
         <activity
             android:name=".LoginActivity"
             android:icon="@drawable/twitter_bird_white"
-            android:logo="@drawable/twitter_bird_white"
             android:label="@string/app_name"
+            android:logo="@drawable/twitter_bird_white"
             android:theme="@style/AppTheme" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -48,11 +51,16 @@
             </intent-filter>
         </activity>
         <activity
-            android:logo="@drawable/twitter_bird_white"
-            android:icon="@drawable/twitter_bird_white"
             android:name=".activities.TimelineActivity"
-            android:theme="@style/AppTheme"
-            android:label="@string/title_activity_timeline" >
+            android:icon="@drawable/twitter_bird_white"
+            android:label="@string/title_activity_timeline"
+            android:logo="@drawable/twitter_bird_white"
+            android:theme="@style/AppTheme" >
+        </activity>
+        <activity
+            android:name=".activities.TweetActivity"
+            android:icon="@drawable/twitter_bird_white"
+            android:label="@string/title_activity_tweet" >
         </activity>
     </application>
 
