--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -29,7 +29,7 @@
             android:value="1" />
 
         <activity
-            android:name=".LoginActivity"
+            android:name=".activities.LoginActivity"
             android:icon="@drawable/twitter_bird_white"
             android:label="@string/app_name"
             android:logo="@drawable/twitter_bird_white"
@@ -52,9 +52,8 @@
         </activity>
         <activity
             android:name=".activities.TimelineActivity"
-            android:icon="@drawable/twitter_bird_white"
             android:label="@string/title_activity_timeline"
-            android:logo="@drawable/twitter_bird_white"
+            android:icon="@drawable/twitter_bird_white"
             android:theme="@style/AppTheme" >
         </activity>
         <activity
