--- a/app/build.gradle
+++ b/app/build.gradle
@@ -33,4 +33,6 @@ dependencies {
     // ActiveAndroid for simple persistence with an ORM
     compile 'com.michaelpardo:activeandroid:3.1.0-SNAPSHOT'
     compile 'com.makeramen:roundedimageview:1.5.0'
+    compile 'com.astuetz:pagerslidingtabstrip:1.0.1'
+
 }
